<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="workTicket"
            type="com.isucorp.acmetest.data.local.model.WorkTicketEntity" />
        <import type="android.view.View" />
        <import type="com.isucorp.acmetest.utils.DateFormat"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_btn_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"/>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/top_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/start_btn_guideline"
            android:fillViewport="true"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/end_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_customer_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_outline_person_24"
                    android:hint="@string/customer_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintVertical_bias="0.0">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_customer_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:text='@{workTicket.customerName ?? @string/empty}'
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_customer_name"
                    android:hint="@string/phone_number"
                    app:startIconDrawable="@drawable/ic_baseline_call_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:text='@{Integer.toString(workTicket.phoneNumber)}'
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_scheduled_time"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_phone_number"
                    app:layout_constraintDimensionRatio="7:1"
                    android:textSize="18sp"
                    android:onClick="scheduledFor"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_job_street"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_scheduled_time"
                    android:hint="@string/job_street"
                    app:startIconDrawable="@drawable/ic_outline_location_on_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_job_street"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:text='@{workTicket.jobStreet ?? @string/empty}'
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_job_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_job_street"
                    android:hint="@string/job_city"
                    app:startIconDrawable="@drawable/ic_baseline_location_city_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_job_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text='@{workTicket.jobCity ?? @string/empty}'/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_postal_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_job_city"
                    android:hint="@string/job_postal_code"
                    app:startIconDrawable="@drawable/ic_baseline_local_post_office_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text='@{workTicket.jobPostalCode ?? @string/empty}'
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_job_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_postal_code"
                    android:hint="@string/job_description"
                    app:startIconDrawable="@drawable/ic_baseline_work_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_job_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text='@{workTicket.jobDescription ?? @string/empty}'
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_dept_class"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_job_description"
                    android:hint="@string/dept_class"
                    app:startIconDrawable="@drawable/ic_baseline_class_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_dept_class"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text='@{workTicket.deptClass ?? @string/empty}'
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_fee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_dept_class"
                    android:hint="@string/diagnostic_fee_text"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_fee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text='@{Integer.toString(workTicket.fee)}'
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_service_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_fee"
                    android:hint="@string/service_type"
                    app:startIconDrawable="@drawable/ic_baseline_miscellaneous_services_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_service_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text='@{workTicket.serviceType ?? @string/empty}'
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_reason_for_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@id/text_input_service_type"
                    android:hint="@string/reason_for_call"
                    app:startIconDrawable="@drawable/ic_baseline_phone_callback_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_reason_for_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text='@{workTicket.reasonForCall ?? @string/empty}'
                        />
                </com.google.android.material.textfield.TextInputLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/start_btn_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="3:1"
            android:text="@string/save"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
